Changelog
=========

1.7 - Unreleased
----------------

- ...


1.6 - January 31, 2012
----------------------

- Fix packaging error.


1.5 - January 31, 2012
----------------------

- Add option to configure which application to load from a .ini file.
  Patch submitted by Stephan Hof.


1.4 - January 15, 2012
----------------------

- Fix typo in the .ini handling logic for configuration files that do not
  contain logging settings.
  [aclark]


1.3 - January 13, 2012
----------------------

- Gracefully handle .ini files that do not contain logging configuration.
  [wichert]

- don't overwrite existing file permissions when setting execute permission.
  This fixes `issue 1
  <https://github.com/wichert/collective.recipe.modwsgi/pull/1>`_
  [fredj]

1.2 - August 7, 2009
--------------------

- Initialise the python logging module. Based on a patch from Philip Kershaw,
  which was based on a discussion on pylons-discuss:
  http://groups.google.com/group/pylons-discuss/browse_thread/thread/9b9add4529b3779c?pli=1
  [wichert]


1.1 - April 20, 2009
--------------------

* Add an 'extra-paths' option, similar the the zc.recipe.egg one.
  [chrism]


1.0 - October 16, 2008
----------------------

* No changes.
  [wichert]



1.0rc1 - June 30, 2008
----------------------

* Update the generated wrapper to test if a path is already in sys.path
  before adding it. This prevents paths being duplicated in sys.path
  when mod_wsgi reloads the module.
  [wichert]



1.0b3 - June 23, 2008
---------------------

* Do not make the recipe a subclass of zc.recipe.egg.Eggs but
  use a local instance to determine the working set.
  [wichert]

* Format the sys.path changes in the wrapper to make it more
  human readable. This is purely cosmetic to help with debugging.
  [wichert]

* Also recreate the wsgi wrapper file when updating a buildout part.
  This is needed to get get changes to versions in the working set
  (such as different version pins) reflected in the wrapper.
  [wichert]