@@ -29,6 +29,32 @@ The apache configuration for this buildout looks like this::
         Allow from all
     </Directory>
 
+If the python script must be accessed from somewhere else than the buildout
+parts folder, you can use the optional ''target'' option to tell the recipe
+where the script should be created.
+
+For instance, the configuration for the mywsgiapp part could look like this::
+
+    [mywsgiapp]
+    recipe = collective.recipe.modwsgi
+    eggs = mywsgiapp
+    target = /var/www/myapp.wsgi
+    config-file = ${buildout:directory}/production.ini
+
+The recipe would then create the script at /var/www/myapp.wsgi.
+
+Note that the directory containing the target script must already exist on
+the filesystem prior to running the recipe and be writeable.
+
+The apache configuration for this buildout would then look like this::
+
+    WSGIScriptAlias /mysite /var/www/myapp.wsgi
+
+    <Directory /var/www>
+        Order deny,allow
+        Allow from all
+    </Directory>
+
 This recipe does not fully install packages, which means that console scripts
 will not be created. If you need console scripts you can add a second
 buildout part which uses `z3c.recipe.scripts`_ to do a full install.
@@ -50,7 +76,7 @@ like this::
     [pipeline:devel]
     pipeline =
         egg:WebError#evalerror
-	my_app
+    my_app
 
 This specifies two way to run the your application: a *production*
 configuration which runs the application directly, and a *devel*
