@@ -4,7 +4,8 @@ Changelog
 1.7 - Unreleased
 ----------------
 
-- ...
+- Add option to configure where target script will be created.
+  Patch submitted by David Convent.
 
 
 1.6 - January 31, 2012
